# youth-weekly

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  code-review-fixes.patch  config.yaml  index.html  pr-body-fix.md  pr-body-issues.md  pr-body.md
.github/: cleanup_workflow_runs.sh  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_submission.md  feature_request.md
.github/workflows/: README.md  ci.yml  deploy.yml  nightly.yml  release.yml  weekly-publish.yml
archive/001/: index.html
docs/: OCP_GUIDE.md  README.md  REVIEW_REPORT.md
docs/issues/001/: README.md
docs/issues/002/: README.md
docs/issues/003/: README.md
docs/issues/004/: README.md
docs/issues/005/: README.md
docs/issues/006/: README.md
docs/issues/007/: README.md
docs/issues/008/: README.md
scripts/: .coverage  README.md  check_new_issue.py  collect_content.py  content_sources.yaml  generate_issue.py  generate_newsletter.py  generate_rss.py  generate_static.py  generate_static_ocp.py  pre-commit.sh  pyproject.toml  requirements.txt  uv.toml
scripts/src/: __init__.py  collectors.py  config.py  curator.py  issue_generator.py  utils.py
scripts/src/ocp/: __init__.py  base.py  registry.py
scripts/src/plugins/: __init__.py  example.py  issue_index.py  search_index.py  stats.py
scripts/src/youth_weekly/: __init__.py  cli.py
scripts/src/youth_weekly/core/: __init__.py  collectors.py  config.py  content.py  curator.py  expander.py  issue_generator.py  llm.py  logger.py  utils.py
scripts/src/youth_weekly/plugin/: __init__.py  base.py  loader.py  registry.py
scripts/src/youth_weekly/plugins/: __init__.py  collect.py  example.py  issue.py  issue_index.py  rss.py  search_index.py  stats.py
scripts/templates/: newsletter.html
scripts/tests/: __init__.py  conftest.py  test_cli.py  test_collectors.py  test_config.py  test_content.py  test_curator_collectors.py  test_expander.py  test_llm.py  test_logger.py  test_new_plugins.py  test_ocp.py  test_plugins.py  test_registry.py
web/: jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/public/: manifest.json  robots.txt  sitemap.xml
web/src/: setupTests.ts
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/archive/: page.tsx
web/src/app/categories/: page.tsx
web/src/app/components/: Footer.tsx  Header.tsx  ThemeProvider.tsx
web/src/app/components/__tests__/: Footer.test.tsx  Header.test.tsx
web/src/app/issues/: page.tsx
web/src/app/issues/[slug]/: page.tsx
web/src/app/issues/[slug]/__tests__/: page.test.tsx
web/src/app/lib/: content.ts
web/src/app/lib/__tests__/: content.test.ts
web/src/app/search/: page.tsx
web/src/app/subscribe/: page.tsx
wechat-miniprogram/: README.md  app.js  app.json  app.wxss
wechat-miniprogram/pages/detail/: detail.js  detail.json  detail.wxml
wechat-miniprogram/pages/index/: index.js  index.wxml
wechat-miniprogram/pages/list/: list.js  list.json  list.wxml
