[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youth-weekly-scripts"
version = "1.0.0"
description = "青年周刊静态文件生成与工具脚本"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "青年周刊编辑部", email = "youth-weekly@example.com"},
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "jinja2>=3.1",
    "feedgen>=1.0",
    "python-dateutil>=2.8",
    "requests>=2.31",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]

[project.scripts]
generate-ocp = "scripts.generate_static_ocp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["templates/*.html"]

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
